# rosu-ur-calc

./: .gitignore  Cargo.toml
benches/: unstable_rate_bench.rs
src/: lib.rs  main.rs  models.rs
src/impls/: baseline.rs  iters.rs  mod.rs  stable.rs
src/impls/circleguard/: frames.rs  mod.rs
src/impls/custom1/: error_stats.rs  frames.rs  hit_object.rs  mod.rs
src/impls/custom2/: frames.rs  hit_object.rs  mod.rs
src/impls/stable/: error_stats.rs  frames.rs  hit_object.rs  hit_object_manager.rs  mod.rs  ruleset.rs
test-data/: replay-osu_156352_3549163348.osr  replay-osu_1636879_3357413950.osr  replay-osu_24722_4355141481.osr  replay-osu_27737_2170634214.osr  replay-osu_3747453_4300226983.osr  replay-osu_983680_2294262584.osr
test-data/replays/: badeu_mayday.osr  gn_barusa.osr  mismagius_usatei.osr  peachick_rog.osr  respektive_high_powered.osr  respektive_unforgiving.osr  respektive_whos_world.osr  rohulk_sanctus.osr  whitecat_flamewall.osr  wolf_gitaroo.osr
tests/: compare_ur.rs
