[package]
name = "rosu-ur-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osu-db = "0.3.0"
rosu-pp = "0.9.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "unstable_rate_bench"
harness = false

[features]
default = []
baseline = []
iters = []
stable = []
circleguard = []
custom1 = []
custom2 = []